tests/NormalTests/paczka1/fuzzy1/12108629.err
Error in line 8: AZDZuk A729 31,2
Error in line 11: AZDZuk A946 86,3
Error in line 18: A240 A729 99,0
Error in line 14: oB5N2xf3c A790 10,6
Error in line 20: A240 A240 91,0
Error in line 27: hqhK9 A729 30,5
